--- a/ContactsTest/res/values/strings.xml
+++ b/ContactsTest/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_name">ContactsTest</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-	<string name="emptylist">Contact list empty</string>
-	 
+    <string name="emptylist">Contact list empty</string>
+    <string name="defaultContactName">Name Surname</string>
+    <string name="defaultContactNumber">(123)123 1234</string>
+
 </resources>
