--- a/NestedFragments/res/values/strings.xml
+++ b/NestedFragments/res/values/strings.xml
@@ -3,10 +3,10 @@
 
     <string name="app_name">GrasApp</string>
     <string name="action_settings">Settings</string>
-    <string name="title_section1">Section 1</string>
+    <string name="title_section1">Group</string>
     <string name="title_section2">Tasks</string>
     <string name="title_section3">Calendar</string>
-      <string name="title_section4">No6</string>
+      <string name="title_section4">No. 6</string>
     <string name="title_section5">789</string>
     <string name="title_section6">SH</string>
     <string name="hello_world">Hello world!</string>
