--- a/TaskAssignmentTest/res/values/strings.xml
+++ b/TaskAssignmentTest/res/values/strings.xml
@@ -8,5 +8,16 @@
     <string name="labelDate">Time</string>
     <string name="labelPeople">People</string>
     <string name="buttonCreate">Create</string>
+    <string name="pick_time">pick time</string>
+    <string name="pick_date">pick date</string>
+    <string name="labelGroup">Group</string>
+    
+     <string-array name="groups_array">
+        <item>No6</item>
+        <item>SH</item>
+        <item>789</item>
+        <item>Life</item>
+    </string-array>
+    
 
 </resources>
