--- a/NestedFragments/res/values/strings.xml
+++ b/NestedFragments/res/values/strings.xml
@@ -22,13 +22,13 @@
     <string name="emptylist">Contact list empty</string>
     <string name="defaultContactName">Name Surname</string>
     <string name="defaultContactNumber">(123)123 1234</string>
-    
+    <string name="taskDetailsGroupLabel">Group: </string>
     <string name="description">Description: This task is to throw away the trash from all rooms once per day</string>
     <string name="buttonSwap">Swap Request</string>
     <string name="labelPeoples">People</string>
     <string name="toggle_turn_on">On</string>
       <string name="toggle_turn_off">Off</string>
-      <string name="labelRemainders">Remainders</string>
+      <string name="labelRemainders">Reminders</string>
       <string name="Due">Due on:</string>
     
     
