--- a/NestedFragments/res/values/strings.xml
+++ b/NestedFragments/res/values/strings.xml
@@ -2,6 +2,12 @@
 <resources>
 
     <string name="app_name">GrasApp</string>
+    
+    <string name="gras_logo_alttext">GrAs logo</string>
+    <string name="username_label">Username</string>
+    <string name="password_label">Password</string>
+	<string name="login_button">Login</string>
+    
     <string name="action_settings">Settings</string>
     <string name="title_section1">Group</string>
     <string name="title_section2">Tasks</string>
